# omnibase_infra

./: .dockerignore  .env.example  .gitignore  .markdown-link-check.json  .migration_freeze  .pre-commit-config.yaml  .secretresolver_allowlist  .shellcheckrc  AGENT_COMPLIANCE.md  ARCHITECTURE_MIGRATION_PLAN.md  CHANGELOG.md  CIRCUIT_BREAKER_THREAD_SAFETY.md  CLAUDE.md  CONFIGURATION_SUBCONTRACT_PLACEMENT.md  CONTAINER_WIRING_ERROR_HANDLING.md  CONTRIBUTING.md  Dockerfile  LOGGING_ENHANCEMENTS.md  MISSING_OMNIBASE_CORE_COMPONENTS.md  Makefile  OMNIAGENT_MIGRATION_PLAN.md  OMNIBASE_CORE_MODEL_CATALOG.md  ONEX_BASELINE_REVIEW.md  ONEX_REVIEW_README.md  POSTGRESQL_REDPANDA_MIGRATION_GUIDE.md  PR11_TEST_COVERAGE_REPORT.md  PRE_COMMIT_HOOKS_FIXED.md  PRE_PUBLIC_AUDIT.md  PR_REVIEW_MISTAKES_ANALYSIS.md  README.md  REFACTORING_MANIFEST.md  RESILIENCE_UTILITIES_SUMMARY.md  TESTING_WITH_LOGS.md  TEST_ISOLATION_IMPROVEMENTS.md  arch-handler-contract-compliance-allowlist.yaml  docker-compose.infrastructure.yml  docker-compose.yml  hook_node_test_report.py  init.sql  modelonexcontainer_import_manifest.json  (+19 more)
migration_sources/omninode_bridge/: .bandit.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENT_REGISTRY_IMPLEMENTATION_SUMMARY.md  AI_QUORUM_IMPLEMENTATION_SUMMARY.md  CACHE_LIMITS_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG.md.bak  CLAUDE.md  CODEGEN_ARCHITECTURE_ANALYSIS.md  CODEGEN_ORCHESTRATOR_REGENERATION_SUMMARY.md  CODEGEN_REDUCER_REGENERATION_SUMMARY.md  CODEGEN_REDUCER_VALIDATION_SUMMARY.md  CODEGEN_SERVICE_UPGRADE_PLAN.md  CONSUL_INTEGRATION_IMPLEMENTATION_REPORT.md  CONSUL_PATTERNS_QUICK_REFERENCE.md  CONTEXT_DISTRIBUTION_IMPLEMENTATION_SUMMARY.md  CONVENIENCE_WRAPPER_IMPLEMENTATION_SUMMARY.md  COORDINATION_INTEGRATION_SUMMARY.md  COORDINATION_QUICK_START.md  COORDINATION_SIGNAL_SYSTEM_QUICK_REF.md  CORE_STREAM_3_COMPLETION_REPORT.md  CORE_STREAM_4_IMPLEMENTATION_REPORT.md  ERROR_RECOVERY_IMPLEMENTATION_SUMMARY.md  EVENT_PUBLISHING_PATTERNS_IMPLEMENTATION_REPORT.md  EVENT_PUBLISHING_QUICK_REFERENCE.md  FIX_SCHEMA_COMPLIANCE_MIXIN_DEFAULTS.md  IMPLEMENTATION_SUMMARY.md  JINJA2_MIXIN_SELECTION_SUMMARY.md  JINJA2_MIXIN_SELECTION_UPDATE.md  KAFKA_TOPICS.txt  LOCAL_CONVENIENCE_CLASSES.md  METRICS_PATTERN_IMPLEMENTATION_REPORT.md  METRICS_PATTERN_SUMMARY.md  MIXIN_SELECTOR_QUICK_REFERENCE.md  MIXIN_SELECTOR_TEST_SUMMARY.md  NODE_BASE_CLASSES_AND_WRAPPERS_GUIDE.md  OMNIBASE_CORE_MIXIN_CATALOG.md  (+27 more)
migration_sources/omninode_bridge/.cursor/: settings.json
migration_sources/omninode_bridge/.github/: FORMATTING_GUIDE.md
migration_sources/omninode_bridge/.maintenance/: redis-valkey-compatibility-report.md
migration_sources/omninode_bridge/.serena/: project.yml
migration_sources/omninode_bridge/FOR_OMNIBASE_CORE/: OMNIBASE_SPI_COMPLIANCE_ISSUES.md  README.md
migration_sources/omninode_bridge/alembic/: README  env.py
migration_sources/omninode_bridge/benchmarks/: __init__.py  comprehensive_benchmark.py
migration_sources/omninode_bridge/config/: README.md  backwards_compatibility_config.yaml  development.env  development.yaml  orchestrator.yaml  production.env  production.yaml  reducer.yaml  registry.yaml
migration_sources/omninode_bridge/dashboards/: pure_reducer_monitoring.json
migration_sources/omninode_bridge/demo_generated_mysql_adapter/: README.md  __init__.py  contract.yaml  node.py
migration_sources/omninode_bridge/deployment/: Dockerfile.generic-effect  Dockerfile.generic-orchestrator  Dockerfile.generic-reducer  Dockerfile.metadata-stamping  Dockerfile.orchestrator  Dockerfile.reducer  README.md  VALIDATION_REPORT.md  docker-compose.adapters.yml  docker-compose.bridge.yml  docker-compose.codegen.yml  docker-compose.metrics.yml  docker-compose.yml  docker-entrypoint-metadata.sh  production_config.yaml
migration_sources/omninode_bridge/docker/: DOCKER_BUILD_GUIDE.md  QUICK_BUILD_REFERENCE.md  docker-compose.dev.yml  docker-compose.enhanced.yml  docker-compose.security.yml  docker-compose.test.yml
migration_sources/omninode_bridge/docs/: BACKWARDS_COMPATIBILITY_GUIDE.md  BACKWARDS_COMPATIBILITY_INTEGRATION.md  BROAD_EXCEPTION_HANDLER_ANALYSIS.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CLI_REFACTORING_SUMMARY.md  CONSUL_HEALTH_CHECK_ISSUE.md  CONTRIBUTING.md  EXCEPTION_HANDLING_REFACTORING.md  FIX_SUMMARY_QUICK_WINS.md  FIX_SUMMARY_STREAMING_AND_EXCEPTIONS.md  GETTING_STARTED.md  INDEX.md  KAFKA_ADVERTISED_LISTENERS_FIX.md  LLAMAINDEX_WORKFLOWS_GUIDE.md  MASTER_PLAN.md  ONEXTREE_CLIENT_IMPLEMENTATION_SUMMARY.md  README.md  REGISTRY_SERVICE_CONTAINER_TODO.md  ROADMAP.md  SECURITY.md  SETUP.md  SQL_INJECTION_TEST_FIXTURE.md  STAMPING_AUTOMATION.md  TEMPLATE_RESEARCH.md  TOPIC_REMEDIATION_REPORT.md  TYPE_SAFETY_IMPROVEMENTS.md  test_generation_kafka_topics.md  wave-6a-integration-tests-summary.md
migration_sources/omninode_bridge/examples/: code_generation_workflow_example.py  codegen_dlq_monitor_example.py  codegen_simple_example.py  codegen_with_test_execution.py  complex_workflow.json  contract_inferencer_example.py  coordination_integration_example.py  demo_mysql_adapter.py  observability_workflow_example.py  performance_optimization_usage.py  performance_optimizer_dry_run.py  pipeline_usage_example.py  pre-commit-integration-example.yaml  simple_workflow.json
migration_sources/omninode_bridge/migrations/: 001_create_workflow_executions.sql  001_rollback_workflow_executions.sql  002_create_workflow_steps.sql  002_rollback_workflow_steps.sql  003_create_fsm_transitions.sql  003_rollback_fsm_transitions.sql  004_create_bridge_states.sql  004_rollback_bridge_states.sql  005_create_node_registrations.sql  005_rollback_node_registrations.sql  006_create_metadata_stamps.sql  006_rollback_metadata_stamps.sql  007_add_missing_workflow_indexes.sql  007_rollback_workflow_indexes.sql  009_enhance_workflow_executions.sql  009_rollback_workflow_executions.sql  010_MIGRATION_SUMMARY.md  010_create_llm_metrics_tables.sql  010_create_workflow_state.sql  010_enhance_bridge_states.sql  (+25 more)
scripts/deploy-agent/: deploy-agent-trigger.sh  pyproject.toml
(+8625 files in other folders)
