[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "omnibase_infra"
version = "0.1.0"
description = "ONEX Infrastructure - Service integration and database infrastructure tools"
authors = ["OmniNode Team <team@omninode.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "omnibase_infra", from = "src"}]

[tool.poetry.scripts]
omni-infra = "omnibase_infra.cli.commands:cli"

[tool.poetry.dependencies]
python = "^3.12"

# ONEX dependencies - Using tagged versions (aligned with omninode_bridge)
# Authentication via git config with Personal Access Token
omnibase-spi = {git = "https://github.com/OmniNode-ai/omnibase_spi.git", tag = "v0.1.0"}
omnibase_core = {git = "https://github.com/OmniNode-ai/omnibase_core.git", tag = "v0.1.0"}

# Core dependencies
pydantic = "^2.11.7"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pyyaml = "^6.0.2"
aiohttp = "^3.9.0"

# Database dependencies (for PostgreSQL connection manager)
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.10"

# Service integration dependencies (for the actual tools we're migrating)
python-consul = "^1.1.0"  # For Consul adapter tools
redis = "^6.0.0"  # For Redis/Valkey integration (redis-py 6.x required by omnibase_core)
aiokafka = "^0.11.0"  # For Kafka tools (async Python client)
confluent-kafka = "^2.12.0"  # For Kafka integration (C-based high-performance client)
hvac = "^2.1.0"  # For Vault adapter tools

# CLI Dependencies
click = "^8.1.0"
rich = "^13.7.0"

# System utilities
cryptography = "^44.0.1"
jinja2 = "^3.1.6"
aiofiles = "^23.2.1"
dependency-injector = "^4.48.1"  # Enhanced dependency injection

# Tracing and observability dependencies
sqlparse = "^0.4.4"  # For secure SQL query sanitization in tracing
structlog = "^23.2.0"  # Structured logging
prometheus-client = "^0.19.0"  # Metrics collection
opentelemetry-api = "^1.27.0"  # OpenTelemetry API
opentelemetry-sdk = "^1.27.0"  # OpenTelemetry SDK
opentelemetry-exporter-otlp = "^1.27.0"  # OTLP exporter
opentelemetry-instrumentation = "^0.48b0"  # Base instrumentation
opentelemetry-instrumentation-fastapi = "^0.48b0"  # FastAPI tracing
opentelemetry-instrumentation-asyncpg = "^0.48b0"  # AsyncPG tracing
opentelemetry-instrumentation-aiohttp-client = "^0.48b0"  # AIOHTTP tracing
opentelemetry-instrumentation-kafka-python = "^0.48b0"  # Kafka tracing
opentelemetry-instrumentation-redis = "^0.48b0"  # Redis tracing

# Additional infrastructure dependencies
httpx = "^0.25.2"  # Modern HTTP client
tenacity = "^9.0.0"  # Retry and resilience patterns
circuitbreaker = "^2.0.0"  # Circuit breaker pattern
slowapi = "^0.1.9"  # Rate limiting
pydantic-settings = "^2.2.1"  # Settings management
jsonschema = "^4.20.0"  # JSON schema validation

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.25.0"
pytest-mock = "^3.11.0"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.0"
ruff = "^0.8.0"
types-pyyaml = "^6.0.12.20250822"
pre-commit = "^3.6.0"

# Test infrastructure dependencies
locust = "^2.31.8"  # Load testing framework for postgres adapter tests
testcontainers = "^4.9.0"  # Integration testing with real database containers
kafka-python = "^2.0.2"  # Kafka client for integration testing

# Additional type stubs for better mypy coverage
types-aiofiles = "^23.2.0.20240403"
types-requests = "^2.32.0.20250914"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101"]  # Allow assert statements in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
